# programa-verificaci-n-de-c-digos

./: .gitignore  Proyecto final.pptx  README.md  main.py
control/: .gitignore  README.md  pyproject.toml
control/installer/: Control.iss
control/scripts/: build.ps1
control/src/control/: config.py  db_web.py  main.py  reporting.py
control/src/control/data/: __init__.py  pdf_extractor.py
control/src/control/database/: db.py
control/src/control/logic/: judge.py
control/src/control/web/: index.html
control/tests/: test_judge_process_scan.py
data/: pdf_extractor.py
database/: db.py
logic/: judge.py
pptx_extract/: [Content_Types].xml
pptx_extract/docProps/: app.xml  core.xml
pptx_extract/ppt/: presentation.xml  viewProps.xml
pptx_extract/ppt/diagrams/: data1.xml  drawing1.xml
pptx_extract/ppt/notesMasters/: notesMaster1.xml
pptx_extract/ppt/notesSlides/: notesSlide1.xml
pptx_extract/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
pptx_extract/ppt/slideMasters/: slideMaster1.xml
pptx_extract/ppt/slides/: slide1.xml  slide10.xml  slide11.xml  slide2.xml  slide3.xml  slide4.xml  slide5.xml  slide6.xml  slide7.xml  slide8.xml  slide9.xml
pptx_extract/ppt/slides/_rels/: slide10.xml.rels  (+1 more)
pptx_extract/ppt/theme/: theme1.xml
src/control/: config.py  main.py
src/control/database/: db.py
src/control/logic/: judge.py
src/control/ui/: console.py
ui/: console.py
