[project]
name = "control"
version = "0.1.0"
description = "Programa de verificacion de codigos"
requires-python = ">=3.10"
dependencies = [
  "pdfplumber",
]

[project.scripts]
control = "control.main:main"
control-db = "control.db_web:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
